apps/mentoraone/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mentoraone
  namespace: mentoraone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mentoraone
  template:
    metadata:
      labels:
        app: mentoraone
    spec:
      containers:
        - name: mentoraone
          image: ghcr.io/hbouzouf20/mentoraone-ep:0038f67
          ports:
            - containerPort: 80
